# rtrt

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
rtrt/: Align.h  Assert.h  LibraryConfig.h  _SourceFiles.cmake
rtrt/cuda/: Assert.h  Defines.h  Device.h  Float4.cuh  Math.h  TypeVerifier.cpp  TypeVerifier.cu  TypeVerifier.cuh  TypeVerifier.h  VectorMemory.h  VectorMemory.inl  _SourceFiles.cmake
rtrt/math/: Matrix.cpp  Matrix.h  Matrix.inl  Normal.cpp  Normal.h  Normal.inl  Point.cpp  Point.h  Point.inl  Quaternion.h  Vector.cpp  Vector.h  Vector.inl  _SourceFiles.cmake
rtrt/scene/: ._SourceFiles.cmake.swp  BarycentricCoords.h  BoundingBox.h  Color.h  HitPoint.h  Intersection.cu  Intersection.cuh  LoaderObj.cpp  LoaderObj.h  Material.h  PointLight.h  Ray.cu  Ray.cuh  RayTriangleIntersection.cu  RayTriangleIntersection.cuh  Scene.cpp  Scene.cu  Scene.cuh  Scene.h  SceneIntersectLinear.inl  Triangle.cu  Triangle.cuh  Triangle.h  TriangleGeometry.h  TriangleGeometryDesc.h  TriangleObject.h  _SourceFiles.cmake
rtrt/scene/accel/: Bvh.cuh  BvhBoundingBox.h  BvhBuilder.cpp  BvhBuilder.h  BvhManager.cpp  BvhManager.h  BvhNode.h  SceneIntersectBvh.inl  _SourceFiles.cmake
src/: LibraryConfig.h  Vector.h  _SourceFiles.cmake
src/cuda/: Assert.h  VectorMemory.h  VectorMemory.inl  _SourceFiles.cmake
src/math/: Normal.h  Point.h  Transformation.h  Vector.h  _SourceFiles.cmake
src/scene/: BoundingBox.h  HitPoint.h  Intersection.cu  Intersection.cuh  Intersection.h  Ray.h  TriangleObject.cpp  TriangleObject.h  _SourceFiles.cmake
src/scene/accel/: _SourceFiles.cmake
stylesheets/: stylesheet.css
